fix chart alignments

--- a/app/assets/stylesheets/section/_managers.scss
+++ b/app/assets/stylesheets/section/_managers.scss
@@ -4,3 +4,13 @@
 	height: 400px;
 	margin: 0 auto
 }
+.manager-insights {
+	h1 {
+		position: relative;
+		right: -15px;
+	}
+	#manager-trends {
+		position: relative;
+		right: -15px;
+	}
+}
